headers/Horde3D.h

# define horde3d "libHorde3D.so"
// *************************************************************************************************
// Core Library
// *************************************************************************************************

/* Group: Typedefs and constants */

/*	Constants: Typedefs
	H3DRes   - handle to resource (type: int32)
	H3DNode  - handle to scene node (type: int32)
*/
typedef int H3DRes;
typedef int H3DNode;